cmake_minimum_required(VERSION 3.23)
project(activityBook C)

set(CMAKE_C_STANDARD 23)

add_executable(act2 activity2.c)
add_executable(act3 activity3.c)
add_executable(hello helloWorld.c)
add_executable(act4 act4.c)
add_executable(act5 act5.c)
add_executable(esf espformat.c)
add_executable(scpr scpr.c)
